--- a/src/styles.scss
+++ b/src/styles.scss
@@ -412,7 +412,7 @@ html.light {
   font-display: swap;
   font-family: 'Playfair Display';
   font-style: italic;
-  font-weight: 400 700;
+  font-weight: 400 900;
   src: url('./assets/font/playfair-display-italic-latin-ext.woff2') format('woff2');
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF,
                  U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF,
@@ -423,7 +423,7 @@ html.light {
   font-display: swap;
   font-family: 'Playfair Display';
   font-style: italic;
-  font-weight: 400 700;
+  font-weight: 400 900;
   src: url('./assets/font/playfair-display-italic-latin.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
                  U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122,
